# dense-pixels

./: dense-pixels.cabal  shaped-pixels.cabal
examples/: blur.hs
src/Data/Dense/: Pixels.hs
src/Data/Shaped/: Pixels.hs
