name:                dense-pixels
version:             0.1.0.0
synopsis:            dense compatability with JuicyPixels and friday
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Dense.Pixels
  other-extensions:    ScopedTypeVariables, FlexibleContexts
  build-depends:
    base,
    JuicyPixels,
    dense,
    vector,
    linear,
    friday,
    lens
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
