name:                shaped-pixels
version:             0.1.0.0
synopsis:            Images with shaped vectors
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Shaped.Pixels
  other-extensions:    ScopedTypeVariables, FlexibleContexts
  build-depends:
    base        >=4.7,
    JuicyPixels >=3.2,
    shaped      >=0.1 && <0.2,
    vector      >=0.10 && <0.11,
    linear,
    friday,
    lens
  hs-source-dirs:      src
  default-language:    Haskell2010
